fixed sidebar overflow on touch devices

--- a/public/css/search-results-tiles.css
+++ b/public/css/search-results-tiles.css
@@ -568,6 +568,9 @@ ul {
 	height: 1.2rem;
 }
 
+#sidebar input[type="text"] {
+	width: 100%;
+}
 
 #sidebar button {
 	height: 2.2rem;
